# modern-cmake

./: .gitignore  .gitmodules  readme.md
notes/01.intro/: readme.md
notes/01.intro/src/: script.cmake
notes/02.language/: readme.md
notes/02.language/src/: bracket.cmake  conditional_expressions.cmake  foreach.cmake  function.cmake  lists.cmake  quoted.cmake  unquoted.cmake  variable_names.cmake  variable_use.cmake
notes/04.project/: readme.md
notes/04.project/cross/: CMakeLists.txt
notes/04.project/src/: CMakeLists.txt  main.cpp
notes/04.project/src/solvers/: CMakeLists.txt  hamiltonian.cpp  hamiltonian.hpp
notes/04.project/std/: CMakeLists.txt  feature_test.cpp
notes/05.targets/: readme.md
notes/05.targets/custom_command/src/: CMakeLists.txt  serializer.cpp
notes/05.targets/dependencies/: CMakeLists.txt
notes/05.targets/interface_libraries/: CMakeLists.txt
notes/05.targets/src/: CMakeLists.txt  calc.cpp  draw.cpp
notes/05.targets/target_hook/src/: CMakeLists.txt
notes/06.generator/: readme.md
notes/06.generator/examples/write/src/: CMakeLists.txt
notes/07.compile/: readme.md
notes/07.compile/examples/default_flags/src/: CMakeLists.txt  asserted.cpp
notes/07.compile/examples/definitions/src/: CMakeLists.txt  define.cpp
notes/07.compile/examples/git_sha/src/: CMakeLists.txt  print_commit.cpp
notes/07.compile/examples/optimization/src/: CMakeLists.txt
notes/07.compile/examples/precompile/src/: CMakeLists.txt  main.cpp
notes/07.compile/examples/save_intermediates/src/: CMakeLists.txt  vec.cpp
notes/07.compile/examples/the_unfortunate_in/src/: CMakeLists.txt  configure.h.in  define.cpp
notes/08.link/: readme.md
notes/08.link/examples/3-dynamic/: reamde.md
notes/08.link/examples/3-dynamic/src/: CMakeLists.txt  main.cpp  one.cpp  two.cpp
notes/08.link/examples/4-unresolved/src/: CMakeLists.txt  main.cpp  nested.cpp
notes/08.link/examples/odr-1-pass/src/: CMakeLists.txt  one.cpp
notes/09.dependencies/: readme.md
notes/09.dependencies/examples/0-find-zlib/src/: CMakeLists.txt  main.cpp
notes/09.dependencies/examples/0-find-zlib/src/cmake/module/: Findzlib.cmake
notes/09.dependencies/examples/1-fetch-content/src/: CMakeLists.txt  config.yaml  main.cpp
notes/10.modules/: readme.md
notes/10.modules/examples/01-first/src/: CMakeLists.txt  main.cpp
notes/11.test/: readme.md
notes/11.test/examples/1-no-framework/: CMakeLists.txt  makefile
notes/11.test/examples/1-no-framework/src/: CMakeLists.txt  bootstrap.cpp  calc.cpp  calc.h  run.cpp
notes/11.test/examples/1-no-framework/test/: CMakeLists.txt  calc_tests.cpp  run_test.cpp  unit_tests.cpp
notes/11.test/examples/2-catch-2/: makefile
notes/11.test/examples/2-catch-2/src/: bootstrap.cpp  calc.cpp  calc.h
notes/11.test/examples/2-catch-2/test/: CMakeLists.txt  calc_tests.cpp  run_test.cpp
notes/11.test/examples/3-gtest/: CMakeLists.txt  makefile
notes/11.test/examples/3-gtest/src/: CMakeLists.txt  calc.cpp
notes/11.test/examples/3-gtest/test/: CMakeLists.txt  calc_tests.cpp
notes/11.test/examples/4-gmock/: CMakeLists.txt  makefile
notes/11.test/examples/4-gmock/src/: CMakeLists.txt  rng.h  run.cpp
notes/11.test/examples/4-gmock/test/: CMakeLists.txt  calc_tests.cpp
notes/11.test/examples/4-gmock/test/mocks/: rng_mock.h
notes/11.test/examples/5-cov/: CMakeLists.txt  makefile
notes/11.test/examples/5-cov/cmake/: Coverage.cmake
notes/11.test/examples/5-cov/src/: CMakeLists.txt  calc.cpp  calc.h  rng_mt19937.cpp  rng_mt19937.h
notes/11.test/examples/5-cov/test/: CMakeLists.txt
