include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG main
)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

add_executable(unit_tests
  calc_tests.cpp
)
target_link_libraries(unit_tests PRIVATE run gtest_main)
include(GoogleTest)
gtest_discover_tests(unit_tests)
